--- a/marvel-softplan-reactjs/public/index.html
+++ b/marvel-softplan-reactjs/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Desafio Softplan"
     />
-    <title>Desafio Softplan</title>
+    <title>Desafio Marvel da Softplan</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
